[package]
name = "clira"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version= "4.2.7", features= ["derive"]}
reqwest = { version = "0.11", features = ["json", "multipart"] }
futures = "0.3"
tokio = { version = "1.12.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["unstable-locales"] }
